# ITIDA-CORETECH

./: README.md
CMake/: README.md
CMake/Project1/: README.md
CMake/Project1/inc/: BIT_MATH.h  DIO_register.h  PORT_register.h  STD_TYPES.h
CMake/Project1/lib/: CMakeLists.txt  DIO_program.c  PORT_program.c
CMake/Project1/src/: CMakeLists.txt
GRADUATION_PROJECT/: README.md  SeqDiagram.wsd
GRADUATION_PROJECT/Client/: Client.pro  admin.cpp  admin.h  client.cpp  client.h  main.cpp  user.cpp  user.h
GRADUATION_PROJECT/DataBase/: AdminUser.json  Readme.md  StandardUser.json
GRADUATION_PROJECT/Server/: JsonHandler.cpp  JsonHandler.h  README.md  Server.pro  main.cpp  server.cpp  server.h
LINUX/: README.md
LINUX/CLI_TOOLS/: HexASCII_CLI.c  README.md  tempCLI.c
Make/: README.md
Make/Project_1/inc/: BIT_MATH.h  DIO_interface.h  DIO_register.h  PORT_config.h  PORT_interface.h  PORT_private.h  README.md  STD_TYPES.h
Make/Project_1/lib/: DIO_program.c  Makefile  PORT_program.c  README.md  config.mk
Make/src/: Makefile  config.mk  main.c
